--- a/Examples/Static-Site/deployment-svc.yml
+++ b/Examples/Static-Site/deployment-svc.yml
@@ -4,7 +4,7 @@ kind: Deployment
 metadata: 
   name: static-site-pod         # Name of the Deployment - unique name
 spec:
-  replica: 1
+  #replica: 1
   template:
     metadata:
       labels:
